--- a/src/public/main.css
+++ b/src/public/main.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#top-graphic-canvas {
+    display: flex;
+    width: 100%;
+    height: 600px;
+    justify-content: center;
+}
+
+#top-graphic {
+    width:75%;
+    height: 600px;
+    background-color: red;
+}
