--- a/src/public/main.css
+++ b/src/public/main.css
@@ -5,12 +5,17 @@
 #top-graphic-canvas {
     display: flex;
     width: 100%;
-    height: 600px;
+    height: 800px;
     justify-content: center;
 }
 
 #top-graphic {
     width:75%;
     height: 600px;
-    background-color: red;
+}
+
+#explore-subsection {
+    width: 200px;
+    height: 200px;
+    background-color: lavender;
 }
